--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="new_user_text">Begin recording your \n first glucose log.</string>
+    <string name="disclaimer">Disclaimer:\n\n We recommend to maintain the same servings when tracking your glucose.\n\n Different servings for the same food may produce dramatical variations in your glucose.</string>
 </resources>
